<resources>
    <string name="app_name">Phone Spec</string>
    <string name="greeting">Hello</string>
    <string name="create_account">Create an account to continue</string>
    <string name="create_account_button">Create an account</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="register_account">Register account</string>
    <string name="welcome">Welcome!</string>
    <string name="google">Google</string>
    <string name="login">Login account</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_there_login_to_continue">Hello there, login to continue</string>
    <string name="user_does_not_exists">User with this email doesn\'t exists</string>
    <string name="user_invalid_password">The password is incorrect</string>
    <string name="password_validate">At least 1 uppercase and number</string>
    <string name="cancel">Cancel</string>
    <string name="find_phone">Find your perfect phone</string>
    <string name="search_suggestion_hint">Search by brand, model, etc</string>

    <string-array name="categories">
        <item>Smartphone</item>
        <item>Tablet</item>
        <item>Watch</item>
    </string-array>

    <string-array name="brand">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Apple</item>
    </string-array>

    <string-array name="price">
        <item>Max $120</item>
        <item>Max $240</item>
        <item>Max $320</item>
        <item>Max $520</item>
        <item>Max $670</item>
    </string-array>

    <!-- firebase auth exceptions -->
    <string name="error_login_custom_token">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_login_custom_token_mismatch">The custom token corresponds to a different audience.</string>
    <string name="error_login_credential_malformed_or_expired">The supplied auth credential is malformed or has expired.</string>
    <string name="error_login_invalid_email">The email address is badly formatted.</string>
    <string name="error_login_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="error_login_user_mismatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_login_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_login_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_login_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_login_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_login_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="error_login_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_login_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_login_password_is_weak">The given password is invalid.</string>
    <string name="error_login_user_token_expired">The user\'s credential is no longer valid. The user must sign in again</string>
    <string name="error_login_invalid_user_token">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="error_login_default_error">An unexpected error occurred.</string>

    <!-- firebase firestore exceptions -->

    <string name="not_found_document">The requested data does not exists.</string>
    <string name="permission_denied">Do not have permission to execute the specified operation.</string>

    <!-- api service exceptions -->

    <string name="server_timeout">An error occurred when retrieving data. Please check your internet connection and try again</string>
    <string name="unautorized_access">An error occurred verifying your account, please sign out and try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>