<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterLoginFragment">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/left_bottom_corner_shape"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/grid_5"
            android:layout_marginTop="@dimen/grid_5"
            android:layout_marginRight="@dimen/grid_5"
            android:src="@drawable/banner_image" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_2"
        android:text="@string/register_account"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_300"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/right_top_corner_shape" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_3"
            android:layout_marginTop="@dimen/grid_3"
            android:layout_marginEnd="@dimen/grid_3"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:layout_marginBottom="@dimen/grid_2"
                android:text="@string/create_account"
                android:textAppearance="?attr/textAppearanceBody2" />

            <com.luc.phonespecs.customviews.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editTextHint="Full name"
                app:inputType="NAME"
                app:typeEditText="Your name" />

            <com.luc.phonespecs.customviews.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editTextHint="Your email adress"
                app:inputType="EMAIL"
                app:typeEditText="Email adress" />

            <com.luc.phonespecs.customviews.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editTextHint="Password"
                app:inputType="PASSWORD"
                app:typeEditText="Password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/grid_6"
                android:layout_marginEnd="@dimen/grid_6"
                android:gravity="center"
                android:text="@string/create_account_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signIn"
                    style="@style/Widget.App.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_1"
                    android:text="@string/sign_in"
                    android:textAppearance="?attr/textAppearanceBody2" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>