<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:paddingTopSystemWindowInsets="@{true}"
        app:paddingBottomSystemWindowInsets="@{true}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.SignInLoginFragment">

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/left_bottom_corner_shape"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/grid_5"
                android:layout_marginTop="@dimen/grid_5"
                android:layout_marginRight="@dimen/grid_5"
                android:src="@drawable/banner_image" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:text="@string/sign_in"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_300"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/right_top_corner_shape" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:layout_marginBottom="@dimen/grid_2"
                    android:text="@string/hello_there_login_to_continue"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/googleSignIn"
                    style="@style/Widget.App.Button.Google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/grid_2"
                    android:text="@string/google"
                    app:icon="@drawable/google_icon"
                    app:iconTint="@null" />


                <com.luc.phonespecs.customviews.CustomEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextHint="Your email adress"
                    app:inputType="EMAIL"
                    app:typeEditText="Email adress" />

                <com.luc.phonespecs.customviews.CustomEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextHint="Password"
                    app:inputType="PASSWORD"
                    app:typeEditText="Password" />

                <TextView
                    android:id="@+id/invalidUser"
                    android:textAppearance="?attr/errorTextAppearance"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/grid_6"
                    android:layout_marginEnd="@dimen/grid_6"
                    android:gravity="center"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUp"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/grid_1"
                        android:text="@string/sign_up"
                        android:textAppearance="?attr/textAppearanceBody2" />

                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_2"
                android:layout_marginEnd="@dimen/grid_3"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
